<resources>
    <string name="app_name">TuIndice</string>
    <string name="yes">Si</string>
    <string name="release">Producción</string>
    <string name="debug">Desarrollo</string>
    <string name="cancel">Cancelar</string>
    <string name="add">Agregar</string>
    <string name="edit">Modificar</string>
    <string name="exit">Salir</string>
    <string name="accept">Aceptar</string>
    <string name="retry">Reintentar</string>
    <string name="restart">Reiniciar</string>
    <string name="open_settings">Ir a la configuración</string>
    <string name="app_version">%1$s v%2$s (%3$d)</string>
    <string name="nav_summary">Resumen</string>
    <string name="nav_record">Informe Académico</string>
    <string name="nav_pensum">Pensum</string>
    <string name="nav_subject">Plan de evaluación</string>
    <string name="nav_about">Acerca de</string>
    <string name="menu_sign_out">Cerrar sesión</string>
    <string name="alert_title_remove_profile_picture_failure">Atención</string>
    <string name="alert_message_remove_profile_picture_failure">
        ¿Estás seguro que deseas remover tu foto de perfil?
    </string>
    <string name="alert_title_fatal_failure">¡Oops, lo sentimos!</string>
    <string name="alert_message_fatal_failure">
        Parece que algo ha salido muy mal por acá. Debes reiniciar <b>TuIndice</b> para continuar
    </string>
    <string name="alert_title_disabled_failure">Tu cuenta ha sido inhabilitada</string>
    <string name="alert_message_disabled_failure">
        Tu cuenta ha sido inhabilitada por violar las políticas de <b>TuIndice</b>.\n\n
        Si crees que se trata de un error o quieres obtener más información, escríbemos desde tu
        correo institucional a <u><b>tuindice@gmail.com</b></u>
    </string>
    <string name="alert_title_link_failure">¡Oops, lo sentimos!</string>
    <string name="alert_message_link_failure">
        Este enlace está corrupto o ya fue usado, por favor solicita otro correo.
    </string>
    <string name="alert_title_sync_failure">¡Revisa tu fecha y hora!</string>
    <string name="alert_message_sync_failure">
        Para que <b>TuIndice</b> funcione correctamente debes ajustar la fecha y hora de tu dispositivo
    </string>
    <string name="alert_title_data_failure">¡Oops, lo sentimos!</string>
    <string name="alert_message_data_failure">
        Parece que algunos servicios de la universidad no están disponibles. Intentar ingresar más tarde
    </string>
    <string name="alert_title_no_services_failure">¡Oops, lo sentimos!</string>
    <string name="alert_message_no_services_failure">Parece que tu dispositivo  no dispone de Google Play Services ;(</string>
    <string name="alert_title_sign_out">Atención</string>
    <string name="alert_message_sign_out">¿Estás seguro que deseas salir?</string>
    <string name="selector_title_report">¿Cómo te podemos ayudar?</string>
    <string-array name="selector_report_items">
        <item>Mi índice es incorrecto</item>
        <item>No puedo descargar mi comprobante</item>
        <item>Hay un error en mi expediente</item>
        <item>No puedo crear/editar/eliminar una evaluación</item>
        
        
        
        
        
        <item>Otro…</item>
    </string-array>
    <string name="snack_bar_error_occurred">¡Ha ocurrido un error!</string>
    <string name="snack_bar_permission_denied">Operación no permitida</string>
    <string name="snack_bar_message_item_removed">%1$s removido</string>
    <string name="snack_bar_action_undone">Deshacer</string>
    <string name="text_5">/ 5</string>
    <string name="text_5_dot">/ 5.0</string>
    <string name="text_last_update">Última actualización: %1$s</string>
    <plurals name="text_subjects_header">
        <item quantity="one">%d materia cursada</item>
        <item quantity="other">%d materias cursadas</item>
    </plurals>
    <string name="label_subjects_approved">Aprobadas</string>
    <string name="label_subjects_failed">Reprobadas</string>
    <string name="label_subjects_retired">Retiradas</string>
    <plurals name="text_credits_header">
        <item quantity="one">%d crédito cursado</item>
        <item quantity="other">%d créditos cursados</item>
    </plurals>
    <string name="label_credits_approved">Aprobados</string>
    <string name="label_credits_failed">Reprobados</string>
    <string name="label_credits_retired">Retirados</string>
    <string name="label_profile_picture_chooser">Foto de perfil</string>
    <string name="snack_bar_profile_picture_updated">Foto de perfil actualizada</string>
    <string name="snack_bar_profile_picture_removed">Foto de perfil removida</string>
    <string name="quarter_grade_diff">Δx %1$.4f</string>
    <string name="quarter_grade_sum">∑x %1$.4f</string>
    <string name="quarter_credits">⦿ %1$d Crs.</string>
    <string name="subject_title">%1$s (%2$s)</string>
    <string name="subject_grade">%1$d / 5</string>
    <string name="subject_credits">%1$d Cr.</string>
    <string name="dialog_enrollment_downloading">Obteniendo comprobante…</string>
    <string name="snack_bar_enrollment_unsupported">Archivo no soportado ;(</string>
    <string name="snack_bar_enrollment_retry">No pudimos descargar el comprobante ;(</string>
    <string name="label_empty_record">
        <b>¡Parece que alguien es nuevo por acá!\n\n</b>
        <b>TuIndice</b> te da la bienvenida a <b>La Simón</b>\n¡Mucho éxito!
    </string>
    <string name="snack_bar_resend">Correo reenviado</string>
    <string name="label_verify">
        Verifica tu cuenta
    </string>
    <string name="label_reset">
        Tu contraseña ha cambiado
    </string>
    <string name="message_verify">
        Hemos enviado un enlace de verificación a tu correo
        institucional (%1$s).\n\n
        Revísalo y estamos listos ;)
    </string>
    <string name="message_reset">
        Hemos enviado un enlace de actualización de contraseña
        a tu correo institucional (%1$s).\n\n
        Revísalo y estamos listos ;)
    </string>
    <string name="text_0">00:00</string>
    <string name="text_or">─ O ─</string>
    <string name="button_cancel"><u>Ingresar con otra cuenta</u></string>
    <string name="button_resend">Enviar nuevamente</string>
    <string name="label_login_activity">TuIndice</string>
    <string name="hint_usb_id">USBID</string>
    <string name="hintPassword">Contraseña</string>
    <string name="button_login">Iniciar sesión</string>
    <string name="label_policies">
        Al usar la aplicación, aceptas los\n
        Términos y condiciones y Política de privacidad
    </string>
    <string name="link_terms_and_conditions">Términos y condiciones</string>
    <string name="link_privacy_policy">Política de privacidad</string>
    <string name="error_empty">Campo vacío</string>
    <string name="error_usb_id">USBID inválido</string>
    <string name="snack_network_unavailable">Comprueba tu conexión</string>
    <string name="snack_service_unreachable">El servidor no está disponible</string>
    <string name="snack_invalid_credentials">USBID o contraseña inválida</string>
    <string-array name="message_loading">
        <item>Calculando la resolvente…</item>
        <item>Calculando el campo magnético…</item>
        <item>Midiendo los anillos de Newton…</item>
        <item>Haciendo la transformada de Fourier…</item>
        <item>Haciendo la transformada de Laplace…</item>
        <item>Rompiendo indeterminaciones con L\'Hopital…</item>
        <item>Ejecutando algoritmo de Dijkstra…</item>
        <item>Aplicando la 1ra Ley de Newton…</item>
        <item>Aplicando la 2da Ley de Newton…</item>
        <item>Aplicando la 3ra Ley de Newton…</item>
        <item>Aplicando Gauss-Jordan…</item>
        <item>Factorizando…</item>
        <item>Integrando…</item>
        <item>Derivando…</item>
        <item>Cancelando términos…</item>
    </string-array>
    <string name="about_version">
        Versión\n
        %1$s
    </string>
    <string name="about_license">
        Creative Commons\nBY-NC 4.0
    </string>
    <string name="about_terms_and_conditions">
        Términos y condiciones\n
        Conoce las condiciones del servicio
    </string>
    <string name="about_privacy_policy">
        Política de privacidad\n
        Conoce como manejamos tus datos
    </string>
    <string name="about_twitter">
        \@TuIndice\n
        ¡Síguenos en Twitter y enterate de todo!
    </string>
    <string name="about_share">
        Compartir\n
        Invita a un amigo a descargar la aplicación
    </string>
    <string name="about_rate">
        Puntúa\n
        ¡Dale las 5 estrellas!
    </string>
    <string name="about_google_play_intent">market://details?id=%1$s</string>
    <string name="about_google_play">https://play.google.com/store/apps/details?id=%1$s</string>
    <string name="about_share_message">
        TuIndice: Una nueva forma de administrar tus notas\n\n
        Disponible en Google Play\n
        https://play.google.com/store/apps/details?id=%1$s
    </string>
    <string name="about_header_developer">Desarrollador</string>
    <string name="about_dev_info">
        Gerardo Prado\n
        Santiago, Chile
    </string>
    <string name="about_dev_report">
        Reportar un error\n
        Reportar un error al desarrollador
    </string>
    <string name="about_dev_contact">
        Contacto\n
        Contactar al desarrollador
    </string>
    <string name="about_source_code">
        GitHub Repository\n
        https://github.com/gdavidpb/tuindice
    </string>
    <string name="about_header_libs">Detrás de TuIndice</string>
    <string name="about_kotlin">
        Kotlin 1.3.72\n
        Programming Language.\n
        © 2012 JetBrains\n
        https://kotlinlang.org/
    </string>
    <string name="about_firebase">
        Firebase 17.4.2\n
        Quickly develop high-quality apps and grow your business.\n
        © 2014 Google\nhttps://firebase.com/
    </string>
    <string name="about_koin">
        Koin 2.1.5\n
        A pragmatic lightweight dependency injection framework for Kotlin.\n
        © 2018 Arnaud Giuliani\n
        https://insert-koin.io/
    </string>
    <string name="about_retrofit">
        Retrofit 2.8.1\n
        A type-safe HTTP client for Android and Java.\n
        © 2015 Square\n
        https://square.github.io/retrofit/
    </string>
    <string name="about_header_special_thanks">Agradecimientos especiales</string>
    <string name="about_dst">
        Dirección de Servicios Telemáticos\n
        Universidad Simón Bolívar\n
        Unidad administrativa\n
        https://www.dst.usb.ve/inicio
    </string>
    <string name="about_freepik">
        Freepik Company\n
        FlatIcon\n
        The largest database of free customizable icons in the world.\n
        https://www.freepik.com/
    </string>
    <string name="about_mit_mapping_lab">
        The Mapping Lab\n
        Massachusetts Institute of Technology\n
        Develops technologies for the future of digital education.\n
        https://mapping.mit.edu/
    </string>
    <string name="text_100">/ 100</string>
    <string name="content_equal">Igual a</string>
    <string name="evaluation_grade_max">%1$.2f / %2$.2f</string>
    <string name="grade_accumulated">Nota acumulada</string>
    <string name="grade_final">Nota final</string>
    <string name="label_empty_evaluations">
        <b>Parece que no hay nada por acá\n\n</b>
        ¡Recuerda que la organización es el secreto del éxito!
    </string>
    <string name="evaluation_other">Otra</string>
    <string name="title_add_evaluation">Agregar evaluación</string>
    <string name="label_evaluation_type">Tipo</string>
    <string name="label_evaluation_max_grade">Valor</string>
    <string name="label_evaluation_date">Fecha</string>
    <string name="label_evaluation_notes">Observaciones</string>
    <string name="label_evaluation_select_date">Selecciona una fecha</string>
</resources>