<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_summary">

    <fragment
        android:id="@+id/nav_summary"
        android:name="com.gdavidpb.tuindice.ui.fragments.SummaryFragment"
        android:label="@string/nav_summary"
        tools:layout="@layout/fragment_summary" />

    <fragment
        android:id="@+id/nav_record"
        android:name="com.gdavidpb.tuindice.ui.fragments.RecordFragment"
        android:label="@string/nav_record"
        tools:layout="@layout/fragment_record">
        <action
            android:id="@+id/action_nav_record_to_nav_subject"
            app:destination="@id/nav_subject"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right">
            <argument
                android:name="subjectId"
                app:argType="string" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/nav_pensum"
        android:name="com.gdavidpb.tuindice.ui.fragments.PensumFragment"
        android:label="@string/nav_pensum"
        tools:layout="@layout/fragment_pensum" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.gdavidpb.tuindice.ui.fragments.AboutFragment"
        android:label="@string/nav_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_subject"
        android:name="com.gdavidpb.tuindice.ui.fragments.SubjectFragment"
        android:label="@string/nav_subject"
        tools:layout="@layout/fragment_about" />

</navigation>